--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 <body>
     <div class="container">
         <h1>FORTECOLLEZIONE</h1>
-        <p>Find us in telegram and instagram </p>
-        
+        <p>Find us in telegram, instagram and TikTok</p>
+
         <a href="https://www.instagram.com/fortecollezione?igsh=ZWtsMGlpbjF6d25o&utm_source=qr" class="btn"> INSTAGRAM </a>
         <a href="https://t.me/fortecollezione" class="btn"> TELEGRAM </a>
         <a href="https://www.tiktok.com/@fortecollezione?_t=8ndPssBY50U&_r=1" class="btn"> TIKTOK </a>
