--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
     <div class="container">
         <h1>FORTECOLLEZIONE</h1>
-        <p>Find us in telegram, instagram and TikTok</p>
+        <p>Find us in Telegram, Instagram and TikTok</p>
 
         <a href="https://www.instagram.com/fortecollezione?igsh=ZWtsMGlpbjF6d25o&utm_source=qr" class="btn"> INSTAGRAM </a>
         <a href="https://t.me/fortecollezione" class="btn"> TELEGRAM </a>
